--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +11,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <Button
+		android:id="@+id/btnPreferences"
+		android:text="Load Preferences Screen"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:onClick="onClickLoad"/>
+    
+	<Button
+		android:id="@+id/btnDisplayValues"
+		android:text="Display Preferences Values"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:onClick="onClickDisplay"/>
+	
+	<EditText
+		android:id="@+id/txtString"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" />
+	
+	<Button
+		android:id="@+id/btnModifyValues"
+		android:text="Modify Preferences Values"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:onClick="onClickModify"/>
 
 </RelativeLayout>
